--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -22,6 +22,7 @@
   gap: 20px;
 }
 
+
 .card {
   background-color: #ffffff;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -60,10 +61,20 @@
 }
 
 .attendance-section h3 {
-  margin-bottom: 15px;
-  color: #333;
+  position: sticky;
+  top: 0;
+  background-color: #ffffff;
+  padding: 10px 0;
+  z-index: 10;
+  border-bottom: 1px solid #ddd;
 }
-
+.scrollable-list {
+  max-height: 300px; /* Listenin maksimum yüksekliği */
+  overflow-y: auto; /* İçerik taşarsa dikey kaydırma */
+  margin-top: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
 .attendance-section input {
   width: 100%;
   padding: 8px 10px;
@@ -78,18 +89,28 @@
   box-shadow: 0 0 5px rgba(52, 152, 219, 0.5);
 }
 
-.course-list li {
-  background-color: #f5f5f5;
+.course-list li,
+.classroom-list li {
+  background-color: #f9f9f9;
   padding: 10px;
-  margin: 10px 0;
-  border: 1px solid #ddd;
-  border-radius: 4px;
+  border-bottom: 1px solid #ddd;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+.course-list,
+.classroom-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.course-list li:last-child,
+.classroom-list li:last-child {
+  border-bottom: none;
+}
 
-.course-list button {
+.course-list button,
+.classroom-list button {
   padding: 6px 12px;
   background-color: #3498db;
   color: #fff;
@@ -99,7 +120,9 @@
   transition: background-color 0.3s ease;
 }
 
-.course-list button:hover {
+
+.course-list button:hover,
+.classroom-list button:hover {
   background-color: #2980b9;
 }
 
@@ -130,8 +153,10 @@
 }
 
 .small-modal {
-  width: 80%;
-  max-width: 400px;
+  width: 200%;
+  max-width: 800px;
+  height: 100%;
+  padding: 30px;
 }
 
 .modal-content h3 {
